<resources>
    <string name="app_name">RhythmCrowd</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_sign_out">Sign out</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="add_post">Add Post</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="comment">Comment</string>
    <string name="num_likes">Number of Likes</string>
    <string name="num_comments">Number of Comments</string>
    <string name="date">Date</string>
    <string name="star">Star</string>
    <string name="latest">Latest</string>
    <string name="popular">Popular</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="bio">Short bio...</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="create_account">Create Account</string>
    <string name="search">Search</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="post">Post</string>
    <string name="website">Website</string>
    <string name="schedule">Schedule</string>
    <string name="social">Social</string>
    <string name="merch">Merch</string>
    <string name="inbox">Inbox</string>
    <string name="playlist">Playlist</string>
    <string name="enable_gig_request">Enable Gig Request</string>
    <string name="update">Update</string>
    <string name="cart">Cart</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="write_post">Write post...</string>
    <string name="write_comment">Write comment...</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="messages">Message</string>
    <string name="songs">Songs</string>
    <string name="date_created">Date Created</string>
    <string name="about">About</string>
    <string name="song">Song</string>
    <string name="add_profile_post">Add Profile Post</string>
    <string name="activity">Activity</string>
    <string name="trending">Trending</string>
    <string name="feed">Feed</string>
    <string name="comments">Comments</string>
    <string name="artist">All Artist</string>
    <string name="genre">Genre</string>
    <string name="search_by_name">Search By Name</string>
    <string name="artist_or_song">Artist or Song</string>
    <string name="connections">Connections</string>
    <string name="date_connection_started">Date Connection Started</string>
    <string name="since">Since:</string>
    <string name="recommendations">Recommended</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="feedback">Feedback</string>
    <string name="verse_1">Verse 1:</string>
    <string name="verse_2">Verse 2:</string>
    <string name="chorus">Chorus:</string>
    <string name="beat">Beat:</string>
    <string name="length">Length:</string>
    <string name="lyrics">Lyrics:</string>
    <string name="tempo">Tempo:</string>

    <string-array name="numbers">
        <item>Five Stars</item>
        <item>FourStars</item>
        <item>Three Stars</item>
        <item>Two Stars</item>
        <item>One Star</item>
    </string-array>

</resources>
