<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.rhythmcrowd.Activities.MainActivity">

    <!--
    <item
        android:id="@+id/action_sign_in"
        android:orderInCategory="100"
        android:title="Sign In"
        app:showAsAction="never"/>
        -->

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="102"
        android:title="@string/action_profile"
        app:showAsAction="never" />

    <!--
    <item
        android:id="@+id/action_cart"
        android:orderInCategory="103"
        android:title="@string/cart"
        app:showAsAction="never"/>
        -->

    <item
        android:id="@+id/action_about"
        android:orderInCategory="99"
        android:title="@string/about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="105"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="106"
        android:title="@string/action_sign_out"
        app:showAsAction="never" />



</menu>
