<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageViewPostLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/star"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPostNumLike"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewPostNumLike"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageViewPostComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@color/my_background"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPostNumComments"
        app:layout_constraintStart_toEndOf="@+id/textViewPostNumLike"
        app:layout_constraintTop_toTopOf="@+id/textViewPostNumComments"
        app:srcCompat="@android:drawable/sym_action_chat" />

    <ImageView
        android:id="@+id/imageViewPostOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/optionsimagedark" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/date"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewUsername"
        app:layout_constraintStart_toEndOf="@+id/textViewUsername"
        app:layout_constraintTop_toTopOf="@+id/textViewUsername"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/textViewPostNumLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/num_likes"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPostComment"
        app:layout_constraintStart_toEndOf="@+id/imageViewPostLike"
        app:layout_constraintTop_toTopOf="@+id/imageViewPostComment" />

    <TextView
        android:id="@+id/textViewPost"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUsername" />

    <TextView
        android:id="@+id/textViewPostNumComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/num_comments"
        app:layout_constraintStart_toEndOf="@+id/imageViewPostComment"
        app:layout_constraintTop_toBottomOf="@+id/textViewPost" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/username"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>