<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_background">

    <Button
        android:id="@+id/buttonSongsPause"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@color/buttonColor"
        android:text="@string/pause"
        android:textColor="@color/button_symbols"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSongsPlay"
        app:layout_constraintEnd_toStartOf="@+id/buttonSongsStop"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonSongsPlay"
        app:layout_constraintTop_toTopOf="@+id/buttonSongsPlay"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonSongsPlay"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/buttonColor"
        android:text="@string/play"
        android:textColor="@color/button_symbols"
        app:layout_constraintEnd_toStartOf="@+id/buttonSongsPause"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAlbumPicture" />

    <Button
        android:id="@+id/buttonSongsStop"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:background="@color/buttonColor"
        android:text="@string/stop"
        android:textColor="@color/button_symbols"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSongsPause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonSongsPause"
        app:layout_constraintTop_toTopOf="@+id/buttonSongsPause"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageViewAlbumPicture"
        android:layout_width="124dp"
        android:layout_height="104dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="8dp"
        android:background="@color/secondButtonColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSongTitle"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <Spinner
        android:id="@+id/spinnerChorus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="170dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSongsPause" />

    <TextView
        android:id="@+id/textViewVerse1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/verse_1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerVerse1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewChorus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/chorus"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerChorus"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewSongTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="16dp"
        android:text="Ella By A.C.O"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSongsFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/feedback"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSongsPlay" />

    <TextView
        android:id="@+id/textViewVerse2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/verse_2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerVerse2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/length"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerLength"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewLyrics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/lyrics"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerLyrics"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerVerse1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="170dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerChorus" />

    <Spinner
        android:id="@+id/spinnerVerse2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="170dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerVerse1" />

    <Spinner
        android:id="@+id/spinnerLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="170dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerVerse2" />

    <Spinner
        android:id="@+id/spinnerLyrics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="170dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerLength" />

    <TextView
        android:id="@+id/textViewBeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/beat"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerBeat"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewTempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/tempo"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerTempo"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerBeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="170dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerLyrics" />

    <Spinner
        android:id="@+id/spinnerTempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="170dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerBeat" />

</androidx.constraintlayout.widget.ConstraintLayout>